fix: remove visible code block overflow (#3654)
* Code blocks should now scroll horizontally if they overflow
* Refactored selectors to avoid having to use the dreaded !important.
* Added more padding to the code blocks such that the "Copy" and "Launch" buttons will never overlap and hide the code below.

--- a/public/styles/hljs/overrides.scss
+++ b/public/styles/hljs/overrides.scss
@@ -1,46 +1,63 @@
-pre {
-  overflow: visible !important;
-  position: relative !important;
+// could remove placeholder selector if we take out
+// PRIMER-REMOVE-ME
+%markdown-pre {
+  overflow: visible;
+  position: relative;
+
   .btn-group {
-    border: 1px #e5e5e5 solid !important;
-    border-radius: 3px !important;
-    font-size: 14px !important;
-    font-weight: 500 !important;
-    position: absolute !important;
-    right: 5px !important;
-    top: 5px !important;
+    border: 1px #e5e5e5 solid;
+    border-radius: 3px;
+    font-size: 14px;
+    font-weight: 500;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 
     button {
-      border-right: 1px #e5e5e5 solid !important;
+      border-right: 1px #e5e5e5 solid;
     }
+
     button:last-child {
-      border-right: none !important;
+      border-right: none;
     }
   }
 
   .btn-launch, .btn-clipboard {
-    background-color: #f8f8f8 !important;
-    border: none !important;
-    outline: 0 !important;
-    padding: .25rem .5rem !important;
-    transition: 0.2s !important;
+    background-color: #f8f8f8;
+    border: none;
+    outline: 0;
+    padding: .25rem .5rem;
+    transition: 0.2s;
 
     &:hover {
-      background-color: #eee !important;
+      background-color: #eee;
     }
 
     &:active {
-      background-color: #dfdfdf !important;
+      background-color: #dfdfdf;
     }
   }
 }
+
+.markdown-body pre {
+  @extend %markdown-pre;
+  .PRIMER-REMOVE-ME & {
+    @extend %markdown-pre;
+  }
+}
+
 .hljs {
+  padding: $spacer-5 $spacer-3;
+  display: block;
+  overflow: auto;
   position: relative;
   line-height: 1.6;
-  font-size: 1.2em;
-  padding: 10px;
   &::before {
     letter-spacing: inherit;
     content: '';
+  }
+
+  .PRIMER-REMOVE-ME .markdown-body & {
+    @extend .hljs;
   }
 }
